--- a/language/zh-hant.json
+++ b/language/zh-hant.json
@@ -6,7 +6,7 @@
 	},
     "appname": "reFill",
     "tagline": "輕鬆補充裸露來源連結",
-    "heading-fetchfromwiki": "從維基獲取內容",
+    "heading-fetchfromwiki": "從維基取得內容",
     "heading-rawwikitext": "輸入維基標記",
     "heading-options": "選項",
     "heading-citegen": "產生參考來源",
@@ -27,17 +27,17 @@
     "label-acknowledgements": "鳴謝",
     "label-reportbugs": "報告錯誤",
     "label-switchlang": "語言",
-    "label-save": "預覽\/在維基保存",
+    "label-save": "預覽\/在維基儲存",
     "label-gadgetoptions": "(選項)",
     "label-homepage": "工具主頁",
     "fixed": "修復了$1 個來源！",
     "nofixed": "沒有來源被修復。",
     "skipped": "下列的引用來源未能補充：",
     "responsibility": "您須要對每個你做的編輯負責。",
-    "pleasedoublecheck": "請在保存前再三檢查！",
-    "noaccessdate": "注意：訪問日期會在結果中忽略。請驗證引用是否仍然支持內容，並在適當情況添加日期。",
-    "chancetoreview": "你有機會在保存之前再查看編輯。",
-    "unfinished": "由於一些限制，程序無法修復所有引用。請嘗試保存並重新運行此工具。",
+    "pleasedoublecheck": "請在儲存前再三檢查！",
+    "noaccessdate": "注意：造訪日期會在結果中忽略。請驗證引用是否仍然支援內容，並在適當情況添加日期。",
+    "chancetoreview": "你有機會在儲存之前再查看編輯。",
+    "unfinished": "由於一些限制，程式無法修復所有引用。請嘗試儲存並重新運行此工具。",
     "colourlegend": "顏色：",
     "colour-insert": "藍",
     "colour-delete": "橙",
@@ -50,17 +50,17 @@
     "summary": "已用 $3 補充了 $1 個裸露來源連結",
     "toollink": "[[User:Zhaofeng_Li\/reFill]]",
     "option-plainlink": "使用普通的格式取代{{cite web}}",
-    "option-plainlink-description": "選取的話，裸露的引用將不會使用{{cite web}}。不建議使用此選項，因為引用模板已提供一致的引用樣式和能夠輕鬆解析的程序。",
-    "option-noremovetag": "不要刪除鏈接失效的標籤",
+    "option-plainlink-description": "選取的話，裸露的引用將不會使用{{cite web}}。不建議使用此選項，因為引用模板已提供一致的引用樣式和能夠輕鬆解析的程式。",
+    "option-noremovetag": "不要刪除連結失效的標籤",
     "option-noremovetag-description": "選取的話，即使在過程中沒有引用因錯誤而跳過，失效的標籤也會被保留。",
     "option-nowatch": "使用維基作為來源的時候不監視頁面",
-    "option-nowatch-description": "選取的話，維基編輯模式的「監視本頁」核取方塊會設置為默認不選取。",
-    "option-addblankmetadata": "資料不可用時添加空白的元數據",
-    "option-noaccessdate": "不要添加訪問日期",
-    "option-noaccessdate-description": "選取的話，訪問日期將在結果中省略。",
-    "option-usedomainaswork": "這個資料不能被解析的時候使用基本域名",
+    "option-nowatch-description": "選取的話，維基編輯模式的「監視本頁」核取方塊會設定為預設不選取。",
+    "option-addblankmetadata": "資料不可用時添加空白的元資料",
+    "option-noaccessdate": "不要添加造訪日期",
+    "option-noaccessdate-description": "選取的話，造訪日期將在結果中省略。",
+    "option-usedomainaswork": "這個資料不能被解析的時候使用基本網域",
     "wmflabs-thankyoutest": "感謝您幫助測試 $1 測試版本。請回報你遇到的問題。",
-    "wmflabs-latestcommit": "最後提交: $1",
-    "wmflabs-poweredby": "由維基媒體實驗室給予技術支持",
+    "wmflabs-latestcommit": "最後送出: $1",
+    "wmflabs-poweredby": "由維基媒體實驗室給予技術支援",
     "wmflabs-testsummary": "已用 $3 的測試版本補充了 $1 個裸露來源連結"
 }
